# gtk-autocorrect

./: .gitignore  autogen.sh  configure.ac
data/: Makefile.am  database.txt
src/: Makefile.am  clapis.c  gtk-auto-corrector.c  gtk-auto-corrector.h  gtk-correction-store.c  gtk-correction-store.h  gtk-im-module.c
